# self_orgainizing_maps

./: .gitignore  CMakeLists.txt  README.md
include/: map.hpp  som.hpp  vis.hpp
src/: demo_linear.cpp
tests/: som-tests.cpp  tests.cpp
